--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/shield-tick.svg
+    - assets/images/box.svg
   fonts:
     - family: Poppins
       fonts:
