--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ flutter:
   assets:
     - assets/images/shield-tick.svg
     - assets/images/box.svg
+    - assets/images/app_icon_with_shadow.svg
     - assets/images/app_icon.svg
   fonts:
     - family: Poppins
