--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   get: ^4.6.6
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
