--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cloud_firestore: ^5.0.2
+  firebase_auth: ^5.1.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
@@ -18,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   assets:
