chore: add item tile copy icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
     - assets/images/analysis-outlined.svg
     - assets/images/profile.svg
     - assets/images/add.svg
+    - assets/images/copy.svg
   fonts:
     - family: Poppins
       fonts:
