chore: add NewRecordScreen icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ flutter:
     - assets/images/profile.svg
     - assets/images/add.svg
     - assets/images/copy.svg
+    - assets/images/arrow-left.svg
+    - assets/images/refresh.svg
   fonts:
     - family: Poppins
       fonts:
