--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cloud_firestore: ^5.0.2
   firebase_auth: ^5.1.1
+  random_string_generator: ^2.0.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
